[gd_scene load_steps=6 format=3 uid="uid://epaupixxbn7s"]

[ext_resource type="Script" path="res://BulbOld.gd" id="1_y10vc"]
[ext_resource type="Texture2D" uid="uid://ceutnx175nnnq" path="res://Assets/lighting-bulb.png" id="2_o502d"]

[sub_resource type="Curve" id="Curve_cv2dm"]
_data = [Vector2(0, 0.681319), 0.0, 3.05548, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="GDScript" id="GDScript_jw573"]
script/source = "# server_node.gd
class_name ServerNode
extends Node

var server := UDPServer.new()
var peers = []

func _ready():
	server.listen(38899)

func _process(delta):
	server.poll() # Important!
	if server.is_connection_available():
		var peer: PacketPeerUDP = server.take_connection()
		var packet = peer.get_packet()
		print(\"Accepted peer: %s:%s\" % [peer.get_packet_ip(), peer.get_packet_port()])
		print(\"Received data: %s\" % [packet.get_string_from_utf8()])
		# Reply so it knows we received the message.
		peer.put_packet(packet)
		# Keep a reference so we can keep contacting the remote peer.
		peers.append(peer)

	for i in range(0, peers.size()):
		pass # Do something with the connected peers.
"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ce7qd"]
radius = 34.0
height = 102.0

[node name="Bulb" type="CharacterBody2D"]
input_pickable = true
motion_mode = 1
script = ExtResource("1_y10vc")
pulse_curve = SubResource("Curve_cv2dm")

[node name="NextColorPolygon" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, -55, -20, -51, -39, -31, -39, -10, -32, 12, -20, 31, -16, 54, 2, 57, 15, 53, 19, 34, 28, 11, 34, -3, 39, -15, 35, -37, 16, -53, -1, -56)

[node name="ColorPolygon" type="Polygon2D" parent="."]
position = Vector2(-16, -32)
scale = Vector2(0.2, 0.2)
polygon = PackedVector2Array(-90, 55, -80, 10, -40, -45, 10, -80, 80, -95, 155, -80, 205, -40, 240, 20, 250, 65, 240, 130, 225, 165, 190, 210, 155, 265, 0, 265, -35, 205, -65, 165, -85, 120)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_o502d")

[node name="ColorUpdateCooldown" type="Timer" parent="."]
wait_time = 0.25
autostart = true
script = SubResource("GDScript_jw573")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_ce7qd")

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
offset_left = -21.0
offset_top = 35.0
offset_right = 21.0
offset_bottom = 65.0

[node name="ToggleLight" type="CheckButton" parent="."]
offset_left = -21.0
offset_top = 65.0
offset_right = 23.0
offset_bottom = 89.0

[node name="PulseIntervalTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="toggle_drag" from="." to="." method="_on_toggle_drag"]
[connection signal="timeout" from="ColorUpdateCooldown" to="." method="_on_color_update_cooldown_timeout"]
[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="toggled" from="ToggleLight" to="." method="_on_toggle_light_toggled"]
[connection signal="timeout" from="PulseIntervalTimer" to="." method="_on_pulse_interval_timer_timeout"]
